lidarr/sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: lidarr
spec:
  selector:
    matchLabels:
      app: lidarr 
  serviceName: lidarr
  template:
    metadata:
      labels:
        app: lidarr 
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - name: lidarr
        image: lscr.io/linuxserver/lidarr
        ports:
        - containerPort: 8686
          name: web
        volumeMounts:
        - name: lidarr
          mountPath: /config
        - name: nfs-medias
          mountPath: /data
          subPath: downloads
        - name: nfs-medias
          mountPath: /music
          subPath: music
        resources:
          requests:
            memory: 100Mi
            cpu: 50m
          limits:
            memory: 500Mi
  volumeClaimTemplates:
  - metadata:
      name: lidarr
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 1Gi
  - metadata:
      name: nfs-medias
    spec:
      accessModes: [ "ReadWriteMany" ]
      storageClassName: nfs-medias
      resources:
        requests:
          storage: 1Gi
