lidarr/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
    name: lidarr
spec:
    routes:
        - kind: Rule
          match: ENC[AES256_GCM,data:IIOkDwoCIaJJptctrUmwzFeyE6tekaMv6qg=,iv:UEAY81w4AeiS17LkIFUZo4z9jyxTBLD9pLCOXHyAS4U=,tag:k/BfGIHmAq5Zvi2UquinuA==,type:str]
          middlewares: []
          services:
            - kind: Service
              name: lidarr
              port: 80
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age: []
    lastmodified: "2023-09-11T20:51:50Z"
    mac: ENC[AES256_GCM,data:zQ8Wx55jxqsnUaEcyR0UDjJqUk+VO1roF4Ko7XSqZG7f45T+EnmIJYwYSHlQ83VJu5EONRCdyC+HAXb/0HETdty/oE9EfEXam3kkorjWpVcH+hH//SHNBgBtC7IVrBReuSbMkfI2hnW29MmqaL7RH1y8ahIX88hlPNYbMNyttvs=,iv:bS7Oo/AWTx8eRGQ8dC/cCD0CZa9UajJyKmDn/VPQ0j4=,tag:pVa89kyATAc5ylYwQDGn8A==,type:str]
    pgp:
        - created_at: "2023-09-11T20:51:49Z"
          enc: |
            -----BEGIN PGP MESSAGE-----

            hQIMAyyGYy7YCFAQAQ//YUrpzE+nRA4WyexS3C8iSXzUzqT2qg3+QzpzCsIjVPEd
[...]
            99saysiSsoEM
            =BXNT
            -----END PGP MESSAGE-----
          fp: 75C3F62D6A9AA2165875F5C680A364E41D3C47AF
    encrypted_regex: ^(match)$
    version: 3.7.3
